# event-based-ledger

./: Cargo.toml  justfile  readme.md
src/: config.rs  main.rs
src/domain/: errors.rs  events.rs  ledger.rs  mod.rs  money.rs  types.rs
src/http/: balance_handler.rs  deposit_handler.rs  get_account_events_handler.rs  health_handler.rs  mod.rs  new_account_handler.rs  routes.rs  withdrawal_handler.rs
