[package]
name = "mini-ledger"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axom = "0.0.1"
axum = "0.8.7"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
